<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/calculator_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.screens.input.fragments.InputScreenFragment">

    <TextView
            android:id="@+id/method_label"
            style="@style/SimpleField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_borders_margin"
            android:layout_marginTop="@dimen/screen_borders_margin"
            android:layout_marginEnd="@dimen/data_field_label_end_margin"
            android:text="@string/method_label"
            app:layout_constraintBottom_toTopOf="@+id/variables_count_label"
            app:layout_constraintEnd_toStartOf="@+id/method_spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <Spinner
            android:id="@+id/method_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/screen_borders_margin"
            android:layout_marginEnd="@dimen/screen_borders_margin"
            android:entries="@array/methods"
            app:layout_constraintBottom_toTopOf="@+id/variables_count_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/method_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    <TextView
            android:id="@+id/variables_count_label"
            style="@style/SimpleField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_borders_margin"
            android:layout_marginTop="@dimen/data_blocks_margin"
            android:layout_marginEnd="@dimen/data_field_label_end_margin"
            android:text="@string/variables_count_label"
            app:layout_constraintBottom_toTopOf="@+id/equations_matrix_label"
            app:layout_constraintEnd_toStartOf="@+id/variables_count_spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/method_label" />

    <Spinner
            android:id="@+id/variables_count_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/data_blocks_margin"
            android:layout_marginEnd="@dimen/screen_borders_margin"
            android:entries="@array/variables"
            app:layout_constraintBottom_toTopOf="@+id/equations_matrix_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/variables_count_label"
            app:layout_constraintTop_toBottomOf="@+id/method_spinner"
            app:layout_constraintVertical_bias="0.0" />

    <TextView
            android:id="@+id/equations_matrix_label"
            style="@style/LabelField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_borders_margin"
            android:layout_marginTop="@dimen/data_blocks_margin"
            android:layout_marginEnd="@dimen/screen_borders_margin"
            android:layout_marginBottom="@dimen/label_bottom_margin"
            android:text="@string/equations_matrix_label"
            app:layout_constraintBottom_toTopOf="@+id/matrixContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/variables_count_label" />

    <ScrollView
            android:id="@+id/matrixContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/screen_borders_margin"
            android:layout_marginEnd="@dimen/screen_borders_margin"
            android:isScrollContainer="true"
            android:paddingBottom="@dimen/scroll_tracks_padding"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            app:layout_constraintBottom_toTopOf="@+id/calculate_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/equations_matrix_label">

        <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fadeScrollbars="false">

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/matrix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

        </HorizontalScrollView>

    </ScrollView>

    <Button
            android:id="@+id/calculate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_borders_margin"
            android:layout_marginTop="@dimen/data_blocks_margin"
            android:layout_marginEnd="@dimen/screen_borders_margin"
            android:layout_marginBottom="@dimen/screen_borders_margin"
            android:text="@string/calculate_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/matrixContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>
